# dappforce-subsocial-runtime

./: Cargo.toml  README.md  build.sh  setup.sh
src/: blogs.rs  lib.rs  migration.rs
src/multisig/: mock.rs  mod.rs  tests.rs  wallet.rs
src/social/: blogs.rs  mock.rs  mod.rs  tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
