[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['subsocial-runtime/std']

[dependencies.subsocial-runtime]
default-features = false
path = '..'

[package]
authors = ['Dappforce']
edition = '2018'
name = 'subsocial-runtime-wasm'
version = '5.2.0'
